# Sisalas

./: .gitignore  CMakeLists.txt  README.md
src/: db_operations.c  db_operations.h  main.c  ui_handlers.c
src/scripts/: reset_db.sh
src/views/: interface.glade
